--- a/src/presentation/styles/global.scss
+++ b/src/presentation/styles/global.scss
@@ -36,4 +36,12 @@ button {
   &:hover {
     opacity: 0.9;
   }
+
+  &:disabled {
+    background-color: $disabledBackground;
+    color: $disabledColor;
+    &:hover {
+      opacity: 1;
+    }
+  }
 }
