refactor: adapt layout to mobile

--- a/src/presentation/components/header/header-styles.scss
+++ b/src/presentation/components/header/header-styles.scss
@@ -3,7 +3,7 @@
 .headerWrap {
   display: flex;
   background-color: $primary;
-  border-top: 40px solid $primary;
+  border-top: 40px solid $primaryDark;
   justify-content: center;
 
   .headerContent {
@@ -41,5 +41,11 @@
         }
       }
     }
+  }
+}
+
+@media only screen and (max-width: 600px) {  
+  .headerWrap {
+    border-top-width: 20px;
   }
 }
